--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -42,11 +42,11 @@
           <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
         </ul>
         <address>
-          <a class="contact-tel" href="tel:+61(0)383766284"
+          <a class="contact-tel2" href="tel:+61(0)383766284"
             >+61(0) 383 766 284</a
           >
 
-          <a class="contact-mail" href="mailto:noreply@envato.com"
+          <a class="contact-mail2" href="mailto:noreply@envato.com"
             >noreply@envato.com</a
           >
         </address>
@@ -67,11 +67,11 @@
           <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
         </ul>
         <address>
-          <a class="contact-tel" href="tel:+61(0)383766284"
+          <a class="contact-tel3" href="tel:+61(0)383766284"
             >+61(0) 383 766 284</a
           >
 
-          <a class="contact-mail" href="mailto:noreply@envato.com"
+          <a class="contact-mail3" href="mailto:noreply@envato.com"
             >noreply@envato.com</a
           >
         </address>
