--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -268,7 +268,11 @@
 }
 
 .contact-tel,
-.contact-mail {
+.contact-mail,
+.contact-tel2,
+.contact-tel3,
+.contact-mail2,
+.contact-mail3 {
   z-index: 888888;
   font-weight: 500;
   font-size: 12px;
@@ -282,8 +286,29 @@
     font-size: 16px;
   }
 }
-
 .contact-tel:before {
+  content: '';
+  display: block;
+  height: 1px;
+  background: #e1e1e1;
+  left: 0;
+  width: 100%;
+  top: 50px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.contact-tel2:before {
+  content: '';
+  display: block;
+  height: 1px;
+  background: #e1e1e1;
+  left: 0;
+  width: 100%;
+  top: 50px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.contact-tel3:before {
   content: '';
   display: block;
   height: 1px;
